src/test/ui/dst/dst-bad-assign.stderr
error[E0308]: mismatched types
  --> $DIR/dst-bad-assign.rs:35:14
   |
LL |     f5.ptr = Bar1 {f: 36};
   |              ^^^^^^^^^^^^ expected trait ToBar, found struct `Bar1`
   |
   = note: expected type `dyn ToBar`
              found type `Bar1`

error[E0277]: the size for values of type `dyn ToBar` cannot be known at compilation time
  --> $DIR/dst-bad-assign.rs:35:5
   |
LL |     f5.ptr = Bar1 {f: 36};
   |     ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `dyn ToBar`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: the left-hand-side of an assignment must have a statically known size

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
